[package]
name = "telegram-undelete"
version = "0.1.0"
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
reqwest = { git = "https://github.com/shouya/reqwest.git" }
glob = "0.2"
